# qttabbar

./: CMakeLists.txt  README.md  README_zh.md
BandObjectLib/: BandObject.cs
BandObjectLib/Dpi/: DpiAwareForm.cs
Docs/: TagColorIslandGitPlan.md
I18N/: Lng_QTTabBar_br.xml  Lng_QTTabBar_de.xml  Lng_QTTabBar_en.xml  Lng_QTTabBar_es.xml  Lng_QTTabBar_es_ES.txt  Lng_QTTabBar_fr_FR.txt  Lng_QTTabBar_fr_FR.xml  Lng_QTTabBar_pt_BR.txt  Lng_QTTabBar_ru.xml  Lng_QTTabBar_ru_RU.txt  Lng_QTTabBar_tr.xml  Lng_QTTabBar_tr_TR.txt  Lng_QTTabBar_zh.xml  Lng_QTTabBar_中文简体.txt
InstallerHelper/: CustomAction.cpp
MinHook/: CMakeLists.txt
Plugins/QTFileTools/: FileOps.cs
Plugins/QTQuick/: QTQuick.cs
Plugins/QTViewModeButton/: ViewModeButton.cs
QTHookLib/: CMakeLists.txt  main.cpp
QTTabBar/: AbstractListView.cs  AliasManager.cs  AliasesForm.cs  ArchivePeekForm.cs  CompareForm.cs  CompareOverlayManager.cs  CompareSplitHost.cs  ComparisonEngine.cs  Config.cs  CreateNewGroupForm.cs  ExplorerManager.cs  ExplorerProcessCaptor.cs  ExtendedListViewCommon.cs  ExtendedSysListView32.cs  GitStatusKind.cs  GitStatusManager.cs  Graphic.cs  GroupsManager.cs  InstanceManager.cs  MenuUtility.cs  OperationHistoryForm.cs  OperationLedgerManager.cs  PluginServer.cs  QTButtonBar.cs  QTSecondViewBar.cs  QTTabBar.csproj  QTTabBarClass.cs  QTUtility.cs  QTUtility2.cs  QTabControl.cs  QTabItem.cs  RecentOpenedTabsManager.cs  Resource_String_zh_CN.resx  Resources_String.resx  Resources_String_de_DE.resx  Resources_String_es_ES.resx  Resources_String_fr_FR.resx  Resources_String_pt_BR.resx  Resources_String_ru_RU.resx  Resources_String_tr_TR.resx  (+21 more)
QTTabBar/Common/: ExplorerBrowserCOMInterfaces.cs  FileSystemKnownFolder.cs  NonFileSystemKnownFolder.cs  ShellFolderItems.cs
QTTabBar/ExplorerBrowser/: ExplorerBrowser.cs
QTTabBar/Interop/: ExplorerManager.cs  NMTVCUSTOMDRAW.cs  ShellMethods.cs  WINDOWPOS.cs
QTTabBar/OptionsDialog/: Options01_Window.xaml.cs  Options02_Tabs.xaml  Options02_Tabs.xaml.cs  Options03_Tweaks.xaml.cs  Options05_General.xaml  Options05_General.xaml.cs  Options06_Appearance.xaml.cs  Options13_Language.xaml.cs  Options14_About.xaml.cs  Options15_Sessions.xaml  Options15_Sessions.xaml.cs  OptionsDialog.xaml  OptionsDialog.xaml.cs
QTTabBar/QTTabBar/: WindowSubclass.cs
